Fix contrast ratio in highlight button

--- a/static/styles/abstracts/_mixins.scss
+++ b/static/styles/abstracts/_mixins.scss
@@ -20,6 +20,7 @@
 }
 
 @mixin link {
+  &,
   &:link,
   &:visited {
     @content;
