--- a/static/styles/components/_button.scss
+++ b/static/styles/components/_button.scss
@@ -32,6 +32,11 @@
 
   &--highlight {
     background-color: $c-highlight;
+    text-shadow: 0 0 3px rgb(255, 255, 255);
+
+    @include link {
+      color: $c-prim;
+    }
 
     &::after {
       background-color: $c-sec;
